--- a/index.html
+++ b/index.html
@@ -2,131 +2,99 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel="stylesheet" href="style.css">
-        <style>
-body {
-  color: white;
-}
-</style>
+        <link rel="stylesheet" href="bootstrap.css">
     </head>
-    <body style= "background-color: #0A0A0A">
+    <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-<a class="navbar-brand" href="#">Navbar</a>
+<a class="navbar-brand" href="#">Weather and Latitude</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
 </button>
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home
+        <a class="nav-link" href="/">Home
           <span class="sr-only">(current)</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
+        <a class="nav-link" href="data.html">Data</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="comparisons.html">Comparisons</a>
       </li>
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Latitude Graphs</a>
         <div class="dropdown-menu">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Separated link</a>
+          <a class="dropdown-item" href="latvcloud.html">Latitude v. Cloudiness</a>
+          <a class="dropdown-item" href="latvtemp.html">Latitude v. Temperature</a>
+          <a class="dropdown-item" href="latvhumidity.html">Latitude v. Humidity</a>
+          <a class="dropdown-item" href="latvwind.html">Latitude v. Windiness</a>
         </div>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-    </form>
 </div>
 </nav>
-<div class="paragragh">
-    <p>Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-    <p><small>This line of text is meant to be treated as fine print.</small></p>
-    <p>The following is <strong>rendered as bold text</strong>.</p>
-    <p>The following is <em>rendered as italicized text</em>.</p>
-    <p>An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>.</p>
+<!-- <div class="container-fluid">
+	<div class="row">
+		<div class="col-md-8">
+            <div class="paragragh"> -->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-8">
+            <p>Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
+            <p><small>This line of text is meant to be treated as fine print.</small></p>
+            <p>The following is <strong>rendered as bold text</strong>.</p>
+            <p>The following is <em>rendered as italicized text</em>.</p>
+            <p>An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>.</p>
+        </div>
+	</div>
+        <div class="col-md-4">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="thumbnail">
+                        <img src="Resources/assets/images/Fig1.png" alt="latvtemp" class="img-thumbnail">
+                    </div>
+                    <div class="caption">
+                        <h5>Latitude v Temperature</h5>
+                        <p>A plot of temperature as a function of latitude.</p>
+                        <p><a href="latvtemp.html" class="btn btn-primary" role="button">Explore</a></p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="thumbnail">
+                        <img src="Resources/assets/images/Fig2.png" alt="latvhumidity" class="img-thumbnail">
+                    </div>
+                    <div class="caption">
+                        <h5>Latitude v Humidity</h5>
+                        <p>A plot of humidity as a function of latitude</p>
+                        <p><a href="latvhumidity.html" class="btn btn-primary" role="button">Explore</a></p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="thumbnail">
+                        <img src="Resources/assets/images/Fig3.png" alt="latvcloud" class="img-thumbnail">
+                    </div>
+                    <div class="caption">
+                        <h5>Latitude v Cloudiness</h5>
+                        <p>A plot of cloudiness as a function of latitude</p>
+                        <p><a href="latvcloud.html" class="btn btn-primary" role="button">Explore</a></p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="thumbnail">
+                        <img src="Resources/assets/images/Fig4.png" alt="latvwind" class="img-thumbnail">
+                    </div>
+                    <div class="caption">
+                        <h5>Latitude v Windiness</h5>
+                        <p>A plot of windiness as a function of latitude</p>
+                        <p><a href="latvwind.html" class="btn btn-primary" role="button">Explore</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
 </div>
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th scope="col">Type</th>
-      <th scope="col">Column heading</th>
-      <th scope="col">Column heading</th>
-      <th scope="col">Column heading</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr class="table-active" style= "color: white">
-      <th scope="row">Active</th>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-    <tr style= "color: white">
-      <th scope="row">Default</th>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-    <tr class="table-primary" >
-      <th scope="row">Primary</th>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-    <tr class="table-secondary">
-      <th scope="row">Secondary</th>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-    <tr class="table-success">
-      <th scope="row">Success</th>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-    <tr class="table-danger">
-      <th scope="row">Danger</th>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-    <tr class="table-warning">
-      <th scope="row">Warning</th>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-    <tr class="table-info">
-      <th scope="row">Info</th>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-    <tr class="table-light">
-      <th scope="row">Light</th>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-    <tr class="table-dark">
-      <th scope="row">Dark</th>
-      <td>Column content</td>
-      <td>Column content</td>
-      <td>Column content</td>
-    </tr>
-  </tbody>
-</table>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     </body>
 </html>
