updated formatting and changed text

--- a/comparisons.html
+++ b/comparisons.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="bootstrap.css">
+        <link rel="stylesheet" href="style.css">
         <title>Comparisons</title>
     </head>
     <body>
@@ -14,7 +15,7 @@
           <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="/">Home
+                <a class="nav-link" href="index.html">Home
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
@@ -38,15 +39,22 @@
         </nav>
     <div class="container-fluid">
     	<div class="row">
-    		<div class="col-md-6">
+    		<div class="col-md-6 comparison">
                 <img src="Resources/assets/images/Fig1.png" alt="latvtemp">
+            </div>
+            <div class="col-md-6 comparison">
                 <img src="Resources/assets/images/Fig2.png" alt="latvhumidity">
-    		</div>
-    		<div class="col-md-6">
+            </div>
+        </div>
+        <div class="row">
+    		<div class="col-md-6 comparison">
                 <img src="Resources/assets/images/Fig3.png" alt="latvcloud">
+            </div>
+            <div class="col-md-6 comparison">
                 <img src="Resources/assets/images/Fig4.png" alt="latvwind">
     		</div>
     	</div>
+    </div>
     </div>
     </body>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
