--- a/latvcloud.html
+++ b/latvcloud.html
@@ -14,7 +14,7 @@
           <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="/">Home
+                <a class="nav-link" href="index.html">Home
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
@@ -37,11 +37,11 @@
         </div>
         </nav>
         <div class="heading">
-            <h2>Heading 2</h2>
+            <h2>Latitude v Cloudiness</h2>
         </div>
         <div class="image">
             <img src="Resources/assets/images/fig3.png" alt="latvcloud">
-            <p>This is a paragraph about the image.</p>
+            <p>Cloudiness is determined by the wind, as it flows between latitudes, it moves laterally along certain belts. You can see this around the world as evidenced in the clusters of lines across all latitudes.</p>
         </div>
     </body>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
