--- a/latvtemp.html
+++ b/latvtemp.html
@@ -14,7 +14,7 @@
          <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
              <li class="nav-item active">
-            <a class="nav-link" href="/">Home
+            <a class="nav-link" href="index.html">Home
                  <span class="sr-only">(current)</span>
             </a>
              </li>
@@ -37,11 +37,11 @@
     </div>
     </nav>
 <div class="heading">
-    <h2>Heading 2</h2>
+    <h2>Latitude v Temperature</h2>
 </div>
 <div class="image">
     <img src="Resources/assets/images/fig1.png" alt="latvtemp">
-    <p>This is a paragraph about the image.</p>
+    <p>The above graph shows that as you get to the more polar ends (-60, 80), temperature has more drastic extremes, often towards the cooler ends. Additionally, there are more cities in the sample that are closer to the north pole (Russia, Scandavia, etc) hence the negative temperatures. </p>
 </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
