--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="collapse navbar-collapse" id="navbarColor01">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/">Home
+        <a class="nav-link" href="index.html">Home
           <span class="sr-only">(current)</span>
         </a>
       </li>
@@ -39,61 +39,59 @@
 	<div class="row">
 		<div class="col-md-8">
             <div class="paragragh"> -->
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-8">
-            <p>Nullam quis risus eget <a href="#">urna mollis ornare</a> vel eu leo. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nullam id dolor id nibh ultricies vehicula.</p>
-            <p><small>This line of text is meant to be treated as fine print.</small></p>
-            <p>The following is <strong>rendered as bold text</strong>.</p>
-            <p>The following is <em>rendered as italicized text</em>.</p>
-            <p>An abbreviation of the word attribute is <abbr title="attribute">attr</abbr>.</p>
-        </div>
-	</div>
-        <div class="col-md-4">
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="thumbnail">
-                        <img src="Resources/assets/images/Fig1.png" alt="latvtemp" class="img-thumbnail">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-8">
+                        <p>This is a project using JSON and random cities from OpenWeatherMap API. Using Python to query the API and generate a random dataset of towns with location data, the graphs were then generated.
+                        The goal of this project was to prove the obvious- looking at weather trends related to their distance from the equator.     
+                        </p>
                     </div>
-                    <div class="caption">
-                        <h5>Latitude v Temperature</h5>
-                        <p>A plot of temperature as a function of latitude.</p>
-                        <p><a href="latvtemp.html" class="btn btn-primary" role="button">Explore</a></p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="thumbnail">
-                        <img src="Resources/assets/images/Fig2.png" alt="latvhumidity" class="img-thumbnail">
-                    </div>
-                    <div class="caption">
-                        <h5>Latitude v Humidity</h5>
-                        <p>A plot of humidity as a function of latitude</p>
-                        <p><a href="latvhumidity.html" class="btn btn-primary" role="button">Explore</a></p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="thumbnail">
-                        <img src="Resources/assets/images/Fig3.png" alt="latvcloud" class="img-thumbnail">
-                    </div>
-                    <div class="caption">
-                        <h5>Latitude v Cloudiness</h5>
-                        <p>A plot of cloudiness as a function of latitude</p>
-                        <p><a href="latvcloud.html" class="btn btn-primary" role="button">Explore</a></p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="thumbnail">
-                        <img src="Resources/assets/images/Fig4.png" alt="latvwind" class="img-thumbnail">
-                    </div>
-                    <div class="caption">
-                        <h5>Latitude v Windiness</h5>
-                        <p>A plot of windiness as a function of latitude</p>
-                        <p><a href="latvwind.html" class="btn btn-primary" role="button">Explore</a></p>
+                    <div class="col-md-4">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <div class="thumbnail">
+                                    <img src="Resources/assets/images/Fig1.png" alt="latvtemp" class="img-thumbnail">
+                                </div>
+                                <div class="caption">
+                                    <h5>Latitude v Temperature</h5>
+                                    <p>A plot of temperature as a function of latitude.</p>
+                                    <p><a href="latvtemp.html" class="btn btn-primary" role="button">Explore</a></p>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="thumbnail">
+                                    <img src="Resources/assets/images/Fig2.png" alt="latvhumidity" class="img-thumbnail">
+                                </div>
+                                <div class="caption">
+                                    <h5>Latitude v Humidity</h5>
+                                    <p>A plot of humidity as a function of latitude.</p>
+                                    <p><a href="latvhumidity.html" class="btn btn-primary" role="button">Explore</a></p>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="thumbnail">
+                                    <img src="Resources/assets/images/Fig3.png" alt="latvcloud" class="img-thumbnail">
+                                </div>
+                                <div class="caption">
+                                    <h5>Latitude v Cloudiness</h5>
+                                    <p>A plot of cloudiness as a function of latitude.</p>
+                                    <p><a href="latvcloud.html" class="btn btn-primary" role="button">Explore</a></p>
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="thumbnail">
+                                    <img src="Resources/assets/images/Fig4.png" alt="latvwind" class="img-thumbnail">
+                                </div>
+                                <div class="caption">
+                                    <h5>Latitude v Windiness</h5>
+                                    <p>A plot of windiness as a function of latitude.</p>
+                                    <p><a href="latvwind.html" class="btn btn-primary" role="button">Explore</a></p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-</div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     </body>
