--- a/latvhumidity.html
+++ b/latvhumidity.html
@@ -14,7 +14,7 @@
           <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="/">Home
+                <a class="nav-link" href="index.html">Home
                   <span class="sr-only">(current)</span>
                 </a>
               </li>
@@ -37,11 +37,11 @@
         </div>
         </nav>
         <div class="heading">
-            <h2>Heading 2</h2>
+            <h2>Latitude v Humidity</h2>
         </div>
         <div class="image">
             <img src="Resources/assets/images/fig2.png" alt="latvhumidity">
-            <p> This is a paragraph about the image.</p>
+            <p> There is no overall trend in Humidity with latitude, however there are clusters of note. The cluster between (-20,40) has a large portion of the lower humidities. In my sample of cities, there were a number of South American cities and Saharan Africa, perhaps skewing these latitudes towards non-humid results. There is another cluster of note in the (60,80) range. Perhaps cities in these extreme northern areas are all situated close to mountains or the Polar Front, causing 0 humidity.</p>
         </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
