--- a/latvhumidity.html
+++ b/latvhumidity.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">Weather and Latitude</a>
+        <a class="navbar-brand" href="index.html">Weather and Latitude</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -40,7 +40,7 @@
             <h2>Latitude v Humidity</h2>
         </div>
         <div class="image">
-            <img src="Resources/assets/images/fig2.png" alt="latvhumidity">
+            <img src="Resources/assets/images/Fig2.png" alt="latvhumidity">
             <p> There is no overall trend in Humidity with latitude, however there are clusters of note. The cluster between (-20,40) has a large portion of the lower humidities. In my sample of cities, there were a number of South American cities and Saharan Africa, perhaps skewing these latitudes towards non-humid results. There is another cluster of note in the (60,80) range. Perhaps cities in these extreme northern areas are all situated close to mountains or the Polar Front, causing 0 humidity.</p>
         </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
