--- a/latvtemp.html
+++ b/latvtemp.html
@@ -7,7 +7,7 @@
     </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#">Weather and Latitude</a>
+    <a class="navbar-brand" href="index.html">Weather and Latitude</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
     </button>
@@ -40,7 +40,7 @@
     <h2>Latitude v Temperature</h2>
 </div>
 <div class="image">
-    <img src="Resources/assets/images/fig1.png" alt="latvtemp">
+    <img src="Resources/assets/images/Fig1.png" alt="latvtemp">
     <p>The above graph shows that as you get to the more polar ends (-60, 80), temperature has more drastic extremes, often towards the cooler ends. Additionally, there are more cities in the sample that are closer to the north pole (Russia, Scandavia, etc) hence the negative temperatures. </p>
 </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
