--- a/latvwind.html
+++ b/latvwind.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">Weather and Latitude</a>
+        <a class="navbar-brand" href="index.html">Weather and Latitude</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -40,7 +40,7 @@
         <h2>Latitude v Windiness</h2>
     </div>
     <div class="image">
-        <img src="Resources/assets/images/fig4.png" alt="latvwind">
+        <img src="Resources/assets/images/Fig4.png" alt="latvwind">
         <p>Wind speed is more intense at the polar ends of the Earth, due to the rotation of the Earth. Average wind speed is less than 15 mph for most latitudes until you get to the more extreme latitudes.</p>
     </div>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
