--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-<a class="navbar-brand" href="#">Weather and Latitude</a>
+<a class="navbar-brand" href="index.html">Weather and Latitude</a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span>
 </button>
@@ -43,7 +43,7 @@
                 <div class="row">
                     <div class="col-md-8">
                         <p>This is a project using JSON and random cities from OpenWeatherMap API. Using Python to query the API and generate a random dataset of towns with location data, the graphs were then generated.
-                        The goal of this project was to prove the obvious- looking at weather trends related to their distance from the equator.     
+                        The goal of this project was to prove the obvious- looking at weather trends related to their distance from the equator.
                         </p>
                     </div>
                     <div class="col-md-4">
